coin description text changes

--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -54,7 +54,7 @@
 /* Light and Dark Mode CSS */
 
 .light-mode {
-    background-color: $white;
+    background-color: $white2;
     color: $black;
     transition: 0.2s;
 
