--- a/src/Components/Coin Description/CoinDescription.scss
+++ b/src/Components/Coin Description/CoinDescription.scss
@@ -51,6 +51,7 @@
 }
 
 .coin-text {
+    border: 1px solid red;
     width: fit-content;
     height: 50%;
     font-size: 20px;
@@ -117,11 +118,7 @@
     }
 }
 
-@media(max-width:700px) {
-    .coin-text {
-        width: 94.5%;
-    }
-}
+
 
 @media(max-width:660px) {
     .coin-title {
