--- a/src/Components/Coin Description/CoinDescription.scss
+++ b/src/Components/Coin Description/CoinDescription.scss
@@ -1,139 +1,139 @@
-@use '../../SCSS/variables' as *;
+@use "../../SCSS/variables" as *;
 
 #coin-description {
-    width: 100%;
-    height: 100%;
-    background-color: $white;
+  width: 100%;
+  height: 100%;
 
-    div {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
+  div {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 #dark-mode {
-    background-color: $black;
-    color: $white;
-    border-bottom: 3px solid $darkgrey;
-    transition: 0.2s;
+  background-color: $black;
+  color: $white;
+  border-bottom: 3px solid $darkgrey;
+  transition: 0.2s;
 }
 
 .dark-mode {
-    background-color: $black;
-    color: $white;
-    border-bottom: 3px solid $darkgrey;
-    transition: 0.2s;
+  background-color: $black;
+  color: $white;
+  border-bottom: 3px solid $darkgrey;
+  transition: 0.2s;
 }
 
 .coin-title {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    padding-top: 10%;
-    padding-bottom: 2%;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  padding-top: 10%;
+  padding-bottom: 2%;
 
-    h1 {
-        width: fit-content;
+  h1 {
+    width: fit-content;
+  }
 
-    }
-
-    img {
-        width: 50px;
-        height: 50px;
-    }
+  img {
+    width: 50px;
+    height: 50px;
+  }
 }
 
 .coin-text {
-    border: 1px solid red;
-    width: fit-content;
-    height: 50%;
-    font-size: 20px;
-    padding-left: 10%;
-    padding-right: 10%;
-    padding-top: 5%;
-    margin-bottom: 2%;
+  width: 100%;
+  height: 50%;
+  font-size: 20px;
+  margin-bottom: 2%;
+
+  p {
+    width: 75%;
+    padding: 10px;
     text-align: justify;
+  }
 }
 
 .read-btn {
-    border: 1px solid $lightgrey;
-    margin-left: 10px;
-    width: fit-content;
-    background-color: $lightgrey;
-    transition: 0.2s;
+  border: 1px solid $lightgrey;
+  width: fit-content;
+  margin-bottom: 5px;
+  background-color: $lightgrey;
+  transition: 0.2s;
 
-    &:hover {
-        border: 1px solid $orange;
-        background-color: $orange;
-    }
+  &:hover {
+    border: 1px solid $orange;
+    background-color: $orange;
+  }
 
-    &:focus {
-        outline: 1px solid $lightgrey;
-    }
+  &:focus {
+    outline: 1px solid $lightgrey;
+  }
 }
 
 .read-btn-dark {
-    border: 1px solid $darkgrey;
-    background-color: $darkgrey;
-    color: $white;
-    transition: 0.2s;
+  border: 1px solid $darkgrey;
+  background-color: $darkgrey;
+  color: $white;
+  transition: 0.2s;
 
-    &:hover {
-        border: 1px solid $orange;
-        background-color: $orange;
-    }
+  &:hover {
+    border: 1px solid $orange;
+    background-color: $orange;
+  }
 
-    &:focus {
-        outline: 1px solid $darkgrey;
-    }
+  &:focus {
+    outline: 1px solid $darkgrey;
+  }
 }
 
-
 .chart {
-
-    height: 50%;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
-
-    div {
-        width: 80%;
-    }
+  //border: 1px solid red;
+  width: 100%;
+  height: 700px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
 }
 
 // Media Queries
 
-@media(max-width:1100px) {
-    .coin-title {
-        padding-top: 15%;
-    }
+@media (max-width: 1100px) {
+  .coin-title {
+    padding-top: 15%;
+  }
+
+  .chart {
+    height: 500px;
+  }
 }
 
+@media (max-width: 660px) {
+  .coin-title {
+    padding-top: 20%;
+  }
 
-
-@media(max-width:660px) {
-    .coin-title {
-        padding-top: 20%;
-    }
+  .chart {
+    height: 300px;
+  }
 }
 
-@media(max-width: 560px) {
-    .coin-title {
-        padding-top: 45%;
-    }
+@media (max-width: 560px) {
+  .coin-title {
+    padding-top: 45%;
+  }
 }
 
-@media(max-width: 450px) {
-    .coin-title {
-        padding-top: 60%;
-    }
+@media (max-width: 450px) {
+  .coin-title {
+    padding-top: 60%;
+  }
 }
